# LVGL

./: .gitignore
lvgl_demo/: CMakeLists.txt  version.h
lvgl_demo/lvgl8/: evdev.c
lvgl_demo/lvgl9/: evdev.c  lv_port_init.c
lvgl_demo/rk_demo/: CMakeLists.txt  S10lv_demo  local_ip.c  lv_toast.c  main.c  main.h  ui_btnmatrix.c  ui_common.c  ui_common.h
lvgl_demo/rk_demo/asr/: asr.c  audio.c
lvgl_demo/rk_demo/assets/fonts/: add_water.c  adwater_cf1.c  adwater_cf2.c  adwater_cn_s.c  adwater_ic1.c  adwater_num_s.c  alarm_pos.c  auto_to_warehouse.c  back_btn.c  back_pos.c  battery.c  card_clean.c  clean_big.c  clean_cn.c  clean_cn_big.c  clean_cn_new.c  clean_cnbig_new.c  clean_finish.c  clean_finish_cn.c  clean_finish_cn1.c  clean_finish_cn2.c  clean_finish_cn3.c  clean_finish_home.c  clean_ic.c  confirm_1.c  confirm_2.c  connect.c  control.c  control1.c  degree.c  font_cn_24.c  font_cn_28.c  font_cn_28_2.c  font_cn_28_3.c  footbath_liquid.c  heat_on.c  loca_end_cn.c  loca_end_cn1.c  lv_font_source_han_sans_sc_16_cjk.c  massage.c  (+26 more)
lvgl_demo/rk_demo/audio_algorithm/include/: rkaudio_preprocess.h
lvgl_demo/rk_demo/furniture_control/: coffee_machine.c  furniture_control_ui.c  icebox_ui.c  player_ui.c
lvgl_demo/rk_demo/gateway_client/: gateway_client.c  gateway_client.h
lvgl_demo/rk_demo/home/: home_ui.c
lvgl_demo/rk_demo/include/: RkBtSink.h
lvgl_demo/rk_demo/intercom_homepage/: ui_intercom_homepage.c
lvgl_demo/rk_demo/intercom_homepage/intercom_call/: ui_intercom_call.c
lvgl_demo/rk_demo/intercom_homepage/video_monitor/: ui_monitor.c
lvgl_demo/rk_demo/layout/: tile_layout.c
lvgl_demo/rk_demo/net_comm/: net_manager.c  net_manager.h
lvgl_demo/rk_demo/protocol/: device_control.c  device_control.h  device_state.c  device_state.h  protocol.h  protocol_builder.c  protocol_handler.c  protocol_parser.c  protocol_selftest.c  protocol_selftest.h  protocol_storage.c  protocol_storage.h
lvgl_demo/rk_demo/rockit/: audio_client.c  audio_in.c  audio_out.c  audio_server.c
lvgl_demo/rk_demo/setting/: about_ui.c  bt_ui.c  language_and_date_ui.c  setting_ui.c  wallpaper_ui.c  wifi_ui.c
lvgl_demo/rk_demo/smart_home/: app_aircond.c  app_music.c  app_switch.c  smart_home_ui.c
lvgl_demo/rk_demo/uart_comm/: uart_manager.c  uart_manager.h
lvgl_demo/rk_demo/ui/components/: btn.c  btn.h  card.c  card.h  clk_light.c  clk_light.h  page_clean.c  page_clean.h  page_loca_end.c  page_loca_end.h  page_location.c  page_location.h  readme.txt  setting.c  setting.h  setting_1.c  setting_1.h  sleep_set.c  sleep_set.h  top_status.c  top_status.h  ui_time.c  ui_time.h  water_add.c  water_add.h  wifi_set.c  wifi_set.h
lvgl_demo/rk_demo/ui/screens/: screen_home.c  screen_home.h  screen_home_clean_flow.c  screen_home_clean_flow.h
lvgl_demo/rk_demo/wifibt/: bt_server.c  wifi_server.c  wifibt.c
uart_bridge/: CMakeLists.txt  S20uart_bridge  main.c
